force-app/main/default/objects/User/fields/agf__GUS_User_Type__c.field-meta.xml
<CustomField>
    <fullName>agf__GUS_User_Type__c</fullName>
    <description>Full Time Employee - This will be used to identify all FTEs in GUS
Contractor - This will be used to identify all Contractors in GUS
Team User - This will be used to identify all Team Users in GUS
API user - This will be used to identify all API users in GUS</description>
    <label>GUS User Type</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Full Time Employee</fullName>
                
                
                    <label>Full Time Employee</label>
                
                </value>
            
                <value>
                
                    <fullName>Contractor</fullName>
                
                
                    <label>Contractor</label>
                
                </value>
            
                <value>
                
                    <fullName>Team User</fullName>
                
                
                    <label>Team User</label>
                
                </value>
            
                <value>
                
                    <fullName>API User</fullName>
                
                
                    <label>API User</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>