force-app/main/default/objects/User/fields/agf__Work_User_Interface__c.field-meta.xml
<CustomField>
    <fullName>agf__Work_User_Interface__c</fullName>
    <inlineHelpText>Determines which version of the Work page you will see for Bugs and User Stories.</inlineHelpText>
    <label>Work User Interface</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Classic</fullName>
                
                
                    <label>Classic</label>
                
                </value>
            
                <value>
                
                    <fullName>Next Generation</fullName>
                
                    <default>true</default>
                
                    <label>Next Generation</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>