force-app/main/default/objects/User/fields/Autopay_Conditional_Text_2_of_2__c.field-meta.xml
<CustomField>
    <fullName>Autopay_Conditional_Text_2_of_2__c</fullName>
    <formula>IF( Contact.Account.Recurring_Billing__c, &quot; &quot;, &quot;You can sign up online by visiting your Community Solar Portal, or call Customer Care  (844) 786-4100 and we will sign you up!&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Autopay Conditional Text 2 of 2</label>
    <type>Text</type>
</CustomField>