force-app/main/default/objects/User/fields/Autopay_Conditional_Text__c.field-meta.xml
<CustomField>
    <fullName>Autopay_Conditional_Text__c</fullName>
    <formula>IF( Contact.Account.Recurring_Billing__c, &quot;Since you&apos;re already signed up for Autopay, your payments will automatically be collected on the first of each month - no action required!&quot;, &quot;Want a quick and easy way to pay your bill each month? Sign up for Autopay, and your payments will automatically be collected on the first of each month - no action required!&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Autopay Conditional Text</label>
    <type>Text</type>
</CustomField>