force-app/main/default/objects/User/fields/Client_Brand_Key__c.field-meta.xml
<CustomField>
    <fullName>Client_Brand_Key__c</fullName>
    <formula>TEXT(Contact.Account.Client_Brand_Key__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Brand Key</label>
    <type>Text</type>
</CustomField>