force-app/main/default/objects/User/fields/Default_Org_Credential_ID__c.field-meta.xml
<CustomField>
    <fullName>Default_Org_Credential_ID__c</fullName>
    <inlineHelpText>Used to default an Org Credential in the &quot;New User Story&quot; quick action on Work</inlineHelpText>
    <label>Default Org Credential ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>