force-app/main/default/objects/User/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <formula>Text(Profile.UserType)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows type of license (Standard, Portal, etc)</inlineHelpText>
    <label>License Type</label>
    <type>Text</type>
</CustomField>