force-app/main/default/objects/User/fields/MetaDataSearch__Recent_Searches__c.field-meta.xml
<CustomField>
    <fullName>MetaDataSearch__Recent_Searches__c</fullName>
    <label>Recent Searches</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>