force-app/main/default/objects/User/fields/Partner_ID__c.field-meta.xml
<CustomField>
    <fullName>Partner_ID__c</fullName>
    <formula>Contact.Partner_Lookup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner ID</label>
    <type>Text</type>
</CustomField>