force-app/main/default/objects/User/fields/Pause_Round_Robin__c.field-meta.xml
<CustomField>
    <fullName>Pause_Round_Robin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pause Round Robin</label>
    <type>Checkbox</type>
</CustomField>