force-app/main/default/objects/User/fields/Sales_Representative_ID__c.field-meta.xml
<CustomField>
    <fullName>Sales_Representative_ID__c</fullName>
    <formula>Contact.Sales_Representative__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Representative ID</label>
    <type>Text</type>
</CustomField>