force-app/main/default/objects/User/listViews/Active_BlueWavers.listView-meta.xml
<ListView>
    <fullName>Active_BlueWavers</fullName>
    <columns>KNOWLEDGE_USER</columns>
    <columns>LIVEAGENT_USER</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATED_BY_NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>dsfs__DSProSFUsername__c</columns>
    <columns>CORE.USERS.CELL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        
            <field>CORE.USERS.ACTIVE</field>
        
            <operation>equals</operation>
        
            <value>1</value>
        
        </filters>
    <filters>
        
            <field>CORE.PROFILE.NAME</field>
        
            <operation>notContain</operation>
        
            <value>partner,community</value>
        
        </filters>
    <label>Active BlueWavers</label>
</ListView>