force-app/main/default/objects/User/listViews/Active_CS_Partners.listView-meta.xml
<ListView>
    <fullName>Active_CS_Partners</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        
            <field>CORE.USERS.ACTIVE</field>
        
            <operation>equals</operation>
        
            <value>1</value>
        
        </filters>
    <filters>
        
            <field>CORE.PROFILE.NAME</field>
        
            <operation>equals</operation>
        
            <value>Partner CS</value>
        
        </filters>
    <label>Active CS Partners</label>
</ListView>