force-app/main/default/objects/User/listViews/Boston_Solar.listView-meta.xml
<ListView>
    <fullName>Boston_Solar</fullName>
    <booleanFilter>1 OR 2 OR 3 OR 4 OR 5</booleanFilter>
    <columns>CORE.USERS.CELL</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        
            <field>CORE.USERS.EMAIL</field>
        
            <operation>contains</operation>
        
            <value>boston</value>
        
        </filters>
    <filters>
        
            <field>CORE.USERS.USERNAME</field>
        
            <operation>contains</operation>
        
            <value>boston</value>
        
        </filters>
    <filters>
        
            <field>CORE.USER_ROLE.NAME</field>
        
            <operation>contains</operation>
        
            <value>boston</value>
        
        </filters>
    <filters>
        
            <field>CORE.PROFILE.NAME</field>
        
            <operation>contains</operation>
        
            <value>boston</value>
        
        </filters>
    <filters>
        
            <field>FULL_NAME</field>
        
            <operation>contains</operation>
        
            <value>Boston Solar</value>
        
        </filters>
    <label>Boston Solar</label>
</ListView>