force-app/main/default/objects/User/listViews/Community_Solar_Portal_Users.listView-meta.xml
<ListView>
    <fullName>Community_Solar_Portal_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        
            <field>CORE.PROFILE.NAME</field>
        
            <operation>contains</operation>
        
            <value>Community</value>
        
        </filters>
    <label>Community Solar Portal Users</label>
    <sharedTo>
        
            <group>BFG</group>
        
        </sharedTo>
</ListView>