force-app/main/default/objects/User/listViews/dsfs__DocuSignActiveUsers.listView-meta.xml
<ListView>
    <fullName>dsfs__DocuSignActiveUsers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        
            <field>dsfs__DSProSFUsername__c</field>
        
            <operation>notEqual</operation>
        
            <value>null</value>
        
        </filters>
    <filters>
        
            <field>dsfs__DSProSFUsername__c</field>
        
            <operation>notEqual</operation>
        
        </filters>
    <label>DocuSign Active Users</label>
</ListView>