force-app/main/default/objects/User/listViews/partner_role.listView-meta.xml
<ListView>
    <fullName>partner_role</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>License_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        
            <field>CORE.PROFILE.NAME</field>
        
            <operation>contains</operation>
        
            <value>Partner</value>
        
        </filters>
    <label>partner role</label>
</ListView>